...
                            android:text="@string/session_role_label"
                            android:textColor="@color/auth_text_secondary"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/currentRoleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="Supervisor"
                            android:textColor="@color/auth_text_primary"
                            android:textSize="@dimen/auth_status_size"
...
                android:layout_marginTop="6dp"
                android:text="@string/session_actions_support"
                android:textColor="@color/auth_text_secondary"
                android:textSize="13sp" />

            <Button
                android:id="@+id/switchRoleButton"
                style="@style/Widget.AuthApp.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_button_height"
                android:layout_marginTop="10dp"
                android:text="@string/session_button_switch_user" />

            <Button
                android:id="@+id/endShiftButton"
                style="@style/Widget.AuthApp.Button.Outlined"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_button_height"
                android:layout_marginTop="10dp"
                android:text="@string/session_button_logout" />
        </LinearLayout>
...
